--- a/src/app/home/purchase-list/purchase-list-filter/purchase-list-filter.component.html
+++ b/src/app/home/purchase-list/purchase-list-filter/purchase-list-filter.component.html
@@ -9,7 +9,7 @@
             class="form-control"
             name="company_invoice"
             [(ngModel)]="saleData.company_invoice"
-            placeholder="Supplier Invoice"
+            placeholder="{{ 'Supplier Invoice' | translate }}"
           />
         </div>
         <div class="form-group mx-sm-3 mb-2">
@@ -19,20 +19,20 @@
             class="form-control"
             name="invoice"
             [(ngModel)]="saleData.invoice"
-            placeholder="Invoice"
+            placeholder="{{ 'Invoice' | translate }}"
           />
         </div>
         <div class="form-group mx-sm-3 mb-2">
           <label for="inputPassword2" class="sr-only">Supplier</label>
           <input name="company" id="typeahead-basic" name="company" [(ngModel)]="saleData.company"
-            [ngbTypeahead]="company_search" placeholder="Supplier" type="text" class="form-control">
+            [ngbTypeahead]="company_search" placeholder="{{ 'Supplier' | translate }}" type="text" class="form-control">
         </div>
         <div class="form-group mx-sm-3 mb-2">
           <label for="inputPassword2" class="sr-only">Date Range</label>
           <input
             autocomplete="off"
             type="text"
-            placeholder="Date Range"
+            placeholder="{{ 'Date Range' | translate }}"
             class="form-control"
             bsDaterangepicker
             [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"
@@ -47,11 +47,11 @@
           style="margin-right:10px"
         >
           <i class="fa fa-calendar-check-o"></i>
-          Search
+          {{ 'Search' | translate }}
         </button>
         <button type="reset" class="btn btn-warning mb-2" (click)="resetSearch()">
           <i class="fa fa-history"></i>
-          Reset
+          {{ 'Reset' | translate }}
         </button>
       </form>
       <!--end::Form-->
