--- a/src/app/home/master-report/master-purchase-due-report/master-purchase-due-report.component.html
+++ b/src/app/home/master-report/master-purchase-due-report/master-purchase-due-report.component.html
@@ -3,27 +3,27 @@
     <div class="card-header card-header-top">
       <span class="margin-align-title card-header-title">
         <div class="font-icon-wrapper font-icon-lg">
-          <i class="fa fa-capsules icon-gradient bg-happy-itmeo"> </i> Purchase Due Report
+          <i class="fa fa-capsules icon-gradient bg-happy-itmeo"> </i> {{ 'Purchase Due Report' | translate }}
         </div>
       </span>
       <div class="btn-actions-pane-right">
-        <i class="pe-7s-cart icon-gradient bg-happy-itmeo"> </i> Purchase Due Report
+        <i class="pe-7s-cart icon-gradient bg-happy-itmeo"> </i> {{ 'Purchase Due Report' | translate }}
       </div>
     </div>
     <div class="card-body">
       <div class="row sale-filter-form-background">
         <div class="col-lg-2 padding-bot-input">
-          <input name="company" id="typeahead-basic" name="company" [(ngModel)]="filterItem.company" [ngbTypeahead]="company_search" placeholder="Company" type="text" class="form-control">
+          <input name="company" id="typeahead-basic" name="company" [(ngModel)]="filterItem.company" [ngbTypeahead]="company_search" placeholder="{{ 'Supplier' | translate }}" type="text" class="form-control">
         </div>
         <div class="col-lg-2 padding-bot-input">
-          <input type="text" name="invoice" [(ngModel)]="filterItem.invoice" placeholder="Invoice" class="form-control" />
+          <input type="text" name="invoice" [(ngModel)]="filterItem.invoice" placeholder="{{ 'Invoice' | translate }}" class="form-control" />
         </div>
         <div class="col-lg-2 padding-bot-input">
-          <input type="text" name="purchase_date" [(ngModel)]="filterItem.purchase_date" placeholder="Select Date" class="form-control" bsDaterangepicker />
+          <input type="text" name="purchase_date" [(ngModel)]="filterItem.purchase_date" placeholder="{{ 'Select Date' | translate }}" class="form-control" bsDaterangepicker />
         </div>
         <div class="col-lg-2 padding-bot-input">
           <select class="ace form-control" name="sales_man" [(ngModel)]="filterItem.sales_man">
-            <option value="0">- Created by -</option>
+            <option value="0">- {{ 'Created by' | translate }} -</option>
             <option *ngFor="let person of salesPersonList" value="{{ person.id }}">{{ person.name }} ({{ person.email }})</option>
           </select>
         </div>
@@ -35,8 +35,8 @@
           </select>
         </div> -->
         <div class="col-lg-2 padding-bot-input">
-          <button type="button" (click)="filterPurcheseList()" class="btn btn-info">Filter</button> &nbsp;
-          <button type="button" (click)="resetList()" class="btn btn-warning">Reset</button>
+          <button type="button" (click)="filterPurcheseList()" class="btn btn-info">{{ 'Filter' | translate }}</button> &nbsp;
+          <button type="button" (click)="resetList()" class="btn btn-warning">{{ 'Reset' | translate }}</button>
         </div>
       </div>
       <div class="row">
@@ -44,16 +44,16 @@
           <table class="mb-0 table table-bordered pull-right summary" style="font-size: 14px; width: 40%; margin-bottom: 20px !important;">
               <thead>
                   <tr>
-                      <th style="width: 33.3%;">Total Amount</th>
-                      <th style="width: 33.3%;">Total Discount</th>
-                      <th style="width: 33.3%;">Total Due</th>
+                      <th style="width: 33.3%;">{{ 'Total Amount' | translate }}</th>
+                      <th style="width: 33.3%;">{{ 'Total Discount' | translate }}</th>
+                      <th style="width: 33.3%;">{{ 'Total Due' | translate }}</th>
                   </tr>
               </thead>
               <tbody>
                   <tr>
-                    <td><span style="font-weight: bold;">= {{ summary.total_amount | number: "1.2-2" }} Tk.</span></td>
-                    <td><span style="font-weight: bold;">= {{ summary.total_discount | number: "1.2-2" }} Tk.</span></td>
-                    <td><span style="font-weight: bold;">= {{ summary.total_due | number: "1.2-2" }} Tk.</span></td>
+                    <td><span style="font-weight: bold;">= {{ summary.total_amount | number: "1.2-2" }} {{ currency }}</span></td>
+                    <td><span style="font-weight: bold;">= {{ summary.total_discount | number: "1.2-2" }} {{ currency }}</span></td>
+                    <td><span style="font-weight: bold;">= {{ summary.total_due | number: "1.2-2" }} {{ currency }}</span></td>
                   </tr>
               </tbody>
           </table>
@@ -63,27 +63,27 @@
             <table class="mb-0 table table-bordered" *ngIf="!customLoader" style="font-size: 12px;">
               <thead>
                   <tr>
-                      <th>Sl#</th>
-                      <th>Purchase Invoice</th>
-                      <th>Purchase Date</th>
-                      <th>Product</th>
-                      <th>Qty</th>
-                      <th>TP</th>
-                      <th>Subtotal</th>
-                      <th>Total Amount</th>
-                      <th>Total Discount</th>
-                      <th>Grand Total</th>
-                      <th>Total Advance</th>
-                      <th>Total Due</th>
-                      <th>Payment Date</th>
-                      <th>Payment Status</th>
-                      <th>Supplier Details</th>
-                      <th>Purchase By</th>
+                      <th>{{ 'Sl' | translate }}</th>
+                      <th>{{ 'Purchase Invoice' | translate }}</th>
+                      <th>{{ 'Purchase Date' | translate }}</th>
+                      <th>{{ 'Product' | translate }}</th>
+                      <th>{{ 'Qty' | translate }}</th>
+                      <th>{{ 'CPU' | translate }}</th>
+                      <th>{{ 'Subtotal' | translate }}</th>
+                      <th>{{ 'Total Amount' | translate }}</th>
+                      <th>{{ 'Total Discount' | translate }}</th>
+                      <th>{{ 'Grand Total' | translate }}</th>
+                      <th>{{ 'Total Advance' | translate }}</th>
+                      <th>{{ 'Total Due' | translate }}</th>
+                      <th>{{ 'Payment Date' | translate }}</th>
+                      <th>{{ 'Payment Status' | translate }}</th>
+                      <th>{{ 'Supplier Details' | translate }}</th>
+                      <th>{{ 'Purchase By' | translate }}</th>
                   </tr>
               </thead>
               <tbody>
                 <tr *ngIf="showEmptyTable">
-                  <td colspan="16">No Data Found! Please Select Search Parameter!</td>
+                  <td colspan="16">{{ 'No Data Found! Please Select Search Parameter!' | translate }}</td>
                 </tr>
                 <ng-container *ngFor="let item of purchaseList; let i='index';">
                   <ng-container *ngFor="let product of item.items; let j='index';">
@@ -95,8 +95,7 @@
                       </ng-container>
                       <ng-container>
                         <td>
-                          {{ product.medicine_type | slice:0:3 }}. {{ product.medicine }}<br/>
-                          {{ product.brand }}
+                          {{ product.medicine }}
                         </td>
                         <td>{{ product.quantity }}</td>
                         <td>{{ product.tp_with_vat }}</td>
@@ -110,7 +109,7 @@
                         <td [attr.rowspan]="item.items.length">
                           {{ item.total_due_amount }}
                           <br/>
-                          <span class="small" style="color:RED;" *ngIf="item.total_due_amount<0">Receivable</span>
+                          <span class="small" style="color:RED;" *ngIf="item.total_due_amount<0">{{ 'Receivable' | translate }}</span>
                         </td>
                         <td [attr.rowspan]="item.items.length">{{ item.due_date }}</td>
                         <td [attr.rowspan]="item.items.length">{{ item.due_status }}</td>
